# Decentralized_Identity_Management_System

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP_GUIDE.md
attestors/: Cargo.toml
attestors/src/: attestation.rs  error.rs  lib.rs  threshold.rs  verifier.rs
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs  utils.rs
identity-core/: Cargo.toml
identity-core/src/: crypto.rs  did.rs  error.rs  lib.rs  utils.rs  vc.rs
ipfs-client/: Cargo.toml
ipfs-client/src/: client.rs  error.rs  lib.rs  retrieval.rs  storage.rs
substrate-node/: Cargo.toml
substrate-node/src/: credential_registry.rs  did_registry.rs  lib.rs  verification.rs
