[package]
name = "identity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bls12_381 = { workspace = true }
schnorrkel = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# DID specific
url = "2.4"
base64 = "0.21"
hex = "0.4"

# Additional crypto dependencies
ff = "0.13"
group = "0.13"
